2004-06-28  Alexander Malysh  <a.malysh@centrium.de> 
    * gwlib/list.[ch]: added 'list_sort' function that sorts the list with qsort.
    * gwlib/octstr.[ch]: added '%H' modifier to 'octstr_format' that converts Octstr
      to hex-encoded in uppercase.
    * gwlib/semaphore.[ch]: added 'semaphore_getvalue' function.

2004-06-25  Alexander Malysh  <a.malysh@centrium.de> 
    * gwlib/log.c: fixed (workarounded) endless panic loop if memcheck were enabled.

2004-06-22  Alexander Malysh  <a.malysh@centrium.de> 
    * doc/userguide/userguide.xml: fixed typo bug#133. additionaly reviewed and fixed
      deprecated 'dlrurl' and 'dlrmask' params.

2004-06-21  Alexander Malysh  <a.malysh@centrium.de> 
    * gw/smsc/smsc_smpp.c: added "more messages to send" support.

2004-06-21  Alexander Malysh  <a.malysh@centrium.de> 
    * gw/msg-decl.h, gw/shared.c, gw/smsc/smsc_cimd2.c: applied patch that
      adds "more messages to send" support (only CIMD2 supported yet).
      Thanks to "Arne K. Haaje" <haaje at eurobate.com> for the patch.
      [Msg-Id: <200406111342.30696.haaje@eurobate.com>].

2004-06-20  Alexander Malysh  <a.malysh@centrium.de> 
    * gw/smscconn.c, gw/smscconn_p.h: more speedup. Changed 
      [allowed|denied|preferred]_smsc_id from 'Octstr' to 'List'.
      So we have no need allways to parse the whole string and split it
      into the list. Now we just split it while starting only once.

2004-06-20  Alexander Malysh  <a.malysh@centrium.de> 
    * gw/smscconn.[ch], gw/smscconn_p.h: made status/killed enums named.
      Teached 'struct StatusInfo' to use named enums for status/killed.
      Changed return value to 'const Octstr* for 'smscconn_name' and 'smscconn_id'
      functions, so the caller see that those _may_ _not_ be freed.
    * gw/bb_alog.c gw/bb_smscconn.c: fixed const identifier warnings.

2004-06-20  Alexander Malysh  <a.malysh@centrium.de> 
    * gw/wap_push_ota.c: fixed attempt to destroy locked mutex.
